# wandbox-lib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: Doxyfile
include/wandbox/: compile.hpp  compiler.hpp  compiler_info.hpp  get_list.hpp  get_permlink.hpp  get_template.hpp  result.hpp  session.hpp  switch.hpp
include/wandbox/detail/: get_connection.hpp  send.hpp  to_compiler.hpp  to_result.hpp  to_session.hpp  to_string.hpp
src/: CMakeLists.txt  compile.cpp  get_list.cpp  get_permlink.cpp  get_template.cpp
src/detail/: get_connection.cpp  send.cpp  to_compiler.cpp  to_result.cpp  to_session.cpp  to_string.cpp
test/: CMakeLists.txt  main.cpp
